# y1brc

./: .gitignore  .typos.toml  Cargo.toml  Makefile.toml  README.md  measurements-small.txt  rust-toolchain.toml
src/: main.rs
