[package]
name = "y1brc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.79" }
fxhash = { version = "0.2.1" }
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
memmap2 = "0.9"
memchr = { version = "2", default-features = false }

# [features]
# generator = ["anyhow", "rand", "rand_distr"]

[[bin]]
name = "generate"
# required-features = ["generator"]
# # path = "bin/generate.rs"

# [[bin]]
# name = "1brc"
# path = "src/main.rs"

[profile.release]
debug = true
